src/styles/main.scss
@import "./variables";
@import "./animations";
@import "./mixins";

* {
  margin: 0;
  padding: 0;
  font: inherit;
  color: inherit;
  font-family: 'Red Hat Display', sans-serif;
  text-decoration: none;
  list-style: none;
}

html {
  font-size: 16px;
  color: $default-blue;
  overflow-x: hidden;

  @media screen and (768px < width) {
    font-size: 18px;
  }

  @media screen and (1240px < width) {
    font-size: 20px;
  }
}

button {
  border: none;
  appearance: none;
  background: none;
  cursor: pointer;
  text-align: center;
}

a {
  cursor: pointer;
}

// Basic Layout
#root {
  @include flex-setter(column);
  min-height: 100dvh;

  main {
    flex: 1;
  }
}

// Error Page
.error-page {
  @include grid-items-center;
  text-align: center;
  grid-template-rows: auto;
  min-height: 60dvh;
  max-height: 1000px;

  h1 {
    margin-top: 32px;

    .error-number {
      animation: error-animation 4s infinite;
    }

    .error-1 {
      animation-delay: 0s;
    }

    .error-2 {
      animation-delay: 1s;
    }

    .error-3 {
      animation-delay: 2s;
    }
  }

  a {
    padding: 8px;
    margin: 32px 0;
    background-color: $default-blue;
    color: $default-white;
    border: ridge 4px $default-blue;
    transition: 0.1s;
  }

  a:hover {
    scale: 1.05;
    box-shadow: 4px 4px 8px 2px $default-blue;
  }

  a:active {
    border-style: groove;
    scale: 1;
  }
}

// Dark Mode
.dark {
  background-color: $default-blue;
  color: $default-white;

  input,
  textarea {
    color: $dark-blue;
    border: solid 2px $default-white;
    border-radius: $small-radius;
  }

  .general-header {
    color: $default-white;

    .logo {
      color: $default-white;
    }
  }

  .general-header .navigation ul li:hover {
    color: $dark-blue;
    background-color: $default-white;
  }

  .home {
    .job-title {
      color: $default-red;
    }

    .skills-section,
    .projects-section {
      background-color: $dark-blue;
    }

    .contact-section {
      header p a {
        color: $default-red;

        &:hover span {
          color: $default-red;
        }

        span {
          color: $default-white;
          transition: 0.25s;
        }

        &::before {
          background-color: $default-white;
        }
      }

      form {

        & input,
        textarea {
          background-color: rgb($default-white, 0.05);
          color: $default-white;
        }

        button {
          color: $default-white;
          border-color: $default-white;

          &:hover {
            color: $default-blue;
            border-color: $default-blue;
            background-color: $default-white;
          }
        }
      }
    }
  }

  footer {
    background-color: $dark-blue;
  }

  .error-page a:hover {
    box-shadow: 4px 4px 8px 2px $dark-blue;
  }

  @media only screen and (max-width: 768px) {

    .general-header,
    .general-header nav .navigation {
      background-color: rgb($default-blue, 0.7);

      .navigation,
      .navigation ul li {
        border-color: inherit;
      }
    }


  }
}

// General Font
p,
a,
li,
label,
input,
textarea {
  font-size: $font-xs;
}

h1,
h2 {
  font-size: $font-xl;
}

h2 {
  line-height: 0.8;
}

h3 {
  font-size: $font-l;
}

